--- a/src/templates/index.twig
+++ b/src/templates/index.twig
@@ -1,14 +1,14 @@
 {# @var craft \craft\web\twig\variables\CraftVariable #}
 {#
 /**
- * hommformviewer plugin for Craft CMS 3.x
+ * HOMM Form Viewer plugin for Craft CMS 4.x
  *
- * hommformviewer index.twig
+ * HOMMFormViewer settings.twig
  *
  * @author    Domenik Hofer
- * @copyright Copyright (c) 2019 Domenik Hofer
- * @link      http://www.homm.ch
- * @package   Hommformviewer
+ * @copyright Copyright (c) 2019 HOMM interactive
+ * @link      https://github.com/HOMMinteractive
+ * @package   HOMMFormViewer
  * @since     1.0.0
  */
 #}
@@ -16,51 +16,66 @@
 {% extends "_layouts/cp" %}
 {% import "_includes/forms" as forms %}
 
-{% do view.registerAssetBundle("homm\\hommformviewer\\assetbundles\\hommformviewer\\HommformviewerAsset") %}
-{% do view.registerAssetBundle("homm\\hommformviewer\\assetbundles\\indexcpsection\\IndexCPSectionAsset") %}
-
-{# Link for the ? icon at the bottom of the page #}
-{% set docsUrl = "???" %}
+{% do view.registerAssetBundle("homm\\hommformviewer\\assetbundles\\hommformviewercp\\HOMMFormViewerCPAsset") %}
 
 {# The title of this CP section #}
-{% set title = "Form Viewer" %}
+{% set title = "Form requests"|t('hommformviewer') %}
 
-{# The URL to this plugin's base CP section #}
-{% set pluginCpUrl = url('hommformviewer') %}
+{% set formTypes = craft.hommformviewer.forms %}
+{% set currentForm = craft.app.request.getParam('form') ?? formTypes[0] %}
 
-{# Get a URL to an image in our AssetBundle #}
-{% set iconUrl = view.getAssetManager().getPublishedUrl('@homm/hommformviewer/assetbundles/indexcpsection/dist', true) ~ '/img/Index-icon.svg' %}
-
-{# Content that should appear in the page header#}
+{# Content that should appear in the page header #}
 {% block actionButton  %}
+    <input class="text search hommformviewer_search" placeholder="{{ 'Search'|t('hommformviewer') }}">
+
     <div class="buttons">
-       <!-- <a href="{{ pluginCpUrl }}" class="btn submit add icon">{{ "Click Me!"|t('hommformviewer') }}</a>-->
-	 <a href="" class="btn submit hommformviewer_export">Als CSV exportieren</a>
+	    <a href="{{ cpUrl('hommformviewer/export', { form: currentForm }) }}" class="btn submit">{{ 'Export as CSV'|t('hommformviewer') }}</a>
     </div>
 {% endblock %}
 
-{# The content of the CP Section#}
-{% set content %}
-
 {% set sidebar %}
-<nav class="hommformviewer_nav">
-<ul>
-{% for key,table in craft.hommformviewer.tables %}
-
-<li><a data-table="{{table}}"><span class="label">{{table}}</span></a></li>
-
-{# class="sel" #}
-
-{% endfor %}
-</ul>
-</nav>
+    <nav class="hommformviewer_nav">
+        <ul>
+            {% for form in formTypes %}
+                <li>
+                    <a href="{{ cpUrl('hommformviewer', { form }) }}" class="{{ form == currentForm ? 'sel' }}">
+                        <span class="label">{{ form }}</span>
+                    </a>
+                </li>
+            {% endfor %}
+        </ul>
+    </nav>
 {% endset %}
-<!--<img width="50px" height="50px" src="{{view.getAssetManager().getPublishedUrl('@homm/hommformviewer/assetbundles/indexcpsection/dist', true) ~ '/img/loading.gif'}}" class="hommformviewer_loading">-->
-<table class="hommformviewer_table">
 
-</table>
+{# The content of the CP Section #}
+{% set content %}
+    {% set rows = craft.hommformviewer.data(currentForm) %}
 
+    <div class="hommformviewer__table">
+        <table>
+            <thead>
+                <tr>
+                    {% for item in rows[:1]|first %}
+                        <th>{{ item }}</th>
+                    {% endfor %}
+                </tr>
+            </thead>
 
-
-
+            <tbody>
+                {% for row in rows[1:] %}
+                    <tr>
+                        {% for item in row %}
+                            <td>
+                                {% if 'http://' in item or 'https://' in item %}
+                                    <a href="{{ item }}" target="_blank" title="{{ item }}" class="table-item">{{ item }}</a>
+                                {% else %}
+                                    <span title="{{ item }}" class="table-item">{{ item }}</span>
+                                {% endif %}
+                            </td>
+                        {% endfor %}
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 {% endset %}
