Update table styling

--- a/src/templates/index.twig
+++ b/src/templates/index.twig
@@ -60,7 +60,7 @@
     {% set rows = craft.hommformviewer.data(currentForm) %}
 
     <div class="hommformviewer__table">
-        <table>
+        <table class="data">
             <thead>
                 <tr>
                     {% for item in rows[:1]|first %}
